--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <meta name="author" content="">
     <meta name="keywords" content="HTML, CSS, Javascript, ReactJS, NodeJS, Coding, Portfolio, Resume, Website, Profile, Github, Linkedin, Design, Interactive, CV, Skills">
     <meta name="robots" content= "index, follow">
-    <meta name="og:title" content="Portfolio Template">
+    <meta name="og:title" content="Portfolio">
     <meta name="og:type" content="Resume Website">
     <meta name="og:locale" content="en_IN">
     <meta property="og:image" content="">
